maze.lessons.maze.island.IslandMaze.scala.error
Escaper:22: error: Unit does not take parameters
do{suivre_mur()
             ^